## Makefile.am -- Process this file with automake to produce Makefile.in

######################################################################
# WIRE PROTOCOL
######################################################################

wire_FILES =  wire/marshall.cpp \
			  wire/protocol.cpp \
			  wire/socket_base.cpp \
			  wire/cache.cpp \
			  wire/sqlite3.c
wire_INCLUDES = \
				-I$(srcdir)/wire
